# deine-idee

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
api/: Cargo.toml
api/migrations/sqlite/2020-03-23-112147_create_ideas/: down.sql  up.sql
api/src/: db.rs  graphql.rs  lib.rs  main.rs  models.rs  schema.rs
api/src/models/: idea.rs
docs/: README.md
server/: Cargo.toml
server/src/: lib.rs  main.rs
web/src/: index.html  index.tsx  styles.css
web/src/components/: Comments.tsx  Dashboard.tsx  Frontpage.tsx  IdeaDetail.tsx  IdeaList.tsx  Nav.tsx
web/src/fontello/: LICENSE.txt  config.json
web/src/fontello/css/: fontello.css
