[package]
name = "api"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.27"
diesel = { version = "1.4.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
env_logger = "0.7.1"
futures = "0.3.4"
juniper = { version = "0.14.2", git = "https://github.com/graphql-rust/juniper" }
juniper_warp = { version = "0.5.2", git = "https://github.com/graphql-rust/juniper" }
log = "0.4.8"
r2d2 = "0.8.8"
r2d2_sqlite = "0.14.0"
rusqlite = "0.21.0"
tokio = { version = "0.2.13", features = ["macros", "fs"] }
warp = "0.2.2"
